Bug 423833 - pen input offset by title bar
Summary: pen input offset by title bar
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2020-07-03 10:29 UTC by Zamundaaa
Modified: 2020-07-08 15:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zamundaaa 2020-07-03 10:29:12 UTC
STEPS TO REPRODUCE
1. Open Firefox with Wayland enabled
2. mark text with the pen

OBSERVED RESULT
THe pen input is offset by the title bar. Once I set the window to have no borders it works just fine.
Xournal++ is also affected but for some reason Krita is not.

EXPECTED RESULT
THe position of the pen on the screen and in the applications should match.

SOFTWARE/OS VERSIONS
Windows: -
macOS: -
Linux/KDE Plasma: Manjaro KDE with the plasma-git packages
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.72
Qt Version: 5.15

ADDITIONAL INFORMATION
Tested on a HP Envy x360
Comment 1 Zamundaaa 2020-07-03 13:41:46 UTC
Okular and Dolphin also affected, so it's safe to say it's a general problem and not the fault of the tested applications
Comment 2 Bug Janitor Service 2020-07-03 15:53:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/96
Comment 3 Zamundaaa 2020-07-03 18:53:30 UTC
The patch makes it work properly. Thanks!
Comment 4 Aleix Pol 2020-07-06 12:44:05 UTC
Git commit 311094ad8be4c76df2a4655fe71e7085fa9c4e14 by Aleix Pol.
Committed on 04/07/2020 at 16:40.
Pushed by vladz into branch 'Plasma/5.19'.

Make sure tablet coordinates take decorations into account

Fixes a small awkward offset on some applicaitons.

M  +2    -2    input.cpp

https://invent.kde.org/plasma/kwin/commit/311094ad8be4c76df2a4655fe71e7085fa9c4e14
Comment 5 Aleix Pol 2020-07-08 15:20:39 UTC
Git commit 89fca06bdb2696129a241ab02a4dddba483c46a2 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 08/07/2020 at 15:20.
Pushed by apol into branch 'master'.

Make sure tablet coordinates take decorations into account

Fixes a small awkward offset on some applicaitons.


(cherry picked from commit 311094ad8be4c76df2a4655fe71e7085fa9c4e14)

M  +2    -2    input.cpp

https://invent.kde.org/plasma/kwin/commit/89fca06bdb2696129a241ab02a4dddba483c46a2