Make sure tablet coordinates take decorations into account

Fixes a small awkward offset on some applicaitons.

BUG: 423833